# ptx-formatter

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: pages.yml  python-app.yml  release.yml
docs/: index.html  ptx_formatter.html  search.js
ptx_formatter/: __init__.py  __main__.py  cli.py  config.toml  formatter.py  tags.py
ptx_formatter/utils/: ast.py  config.py  context.py  indent.py  namespace.py
tests/: expressionTestCase.py  test_config.py  test_joinLines.py  test_ptx_cdata.py  test_ptx_cli.py  test_ptx_formatter.py  test_ptx_inline_comments.py  test_ptx_inlined_elements.py  test_ptx_multiline_attributes.py  test_ptx_namespaces.py  test_ptx_new_formatter.py  test_ptx_newlines.py  test_ptx_processing_instructions.py  test_ptx_self_closing_empty_verbatim.py  test_ptx_self_closing_tag_space.py  test_ptx_space_at_inlined.py
tests/files/: fewNewlines.ptx  fewWithListing.ptx
